@@ -1,3 +1,13 @@
+2010-11-19  Petr Machata  <pmachata@redhat.com>
+
+	* testsuite/ltrace.main/system_calls.exp: On s390x, names of mmap,
+	fstat and stat system calls are different.
+
+2010-11-19  Petr Machata  <pmachata@redhat.com>
+
+	* testsuite/lib/ltrace.exp (ltrace_verify_output): Add function
+	argument with grep flavor to use.
+
 2010-11-18  Petr Machata  <pmachata@redhat.com>
 
 	* sysdeps/linux-gnu/ppc/ptrace.h (GET_FPREG): New macro.
